fix spacing issue on buttons
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk@111100 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/mockups/glaucus-quick/glaucus.css
+++ b/mockups/glaucus-quick/glaucus.css
@@ -17,7 +17,7 @@ header {
 
 .toolbar {
 	height: 45px;
-	width: 320px;
+	width: 100%;
 	padding: 0;
 	color: white;
 	background: black;
@@ -36,7 +36,7 @@ header {
 	padding: 0;
 	margin: 0;
 	
-	width: 19%;
+	width: 64px;
 	height: 44px;
 	
 	border: none;
